// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List > should call the onAdd callback when a shape is added 1`] = `
<div
  aria-hidden="true"
>
  <div
    aria-label="container-main-shapes"
    class="w-full h-full flex flex-col items-center justify-center"
    role="list"
  >
    <div
      class="w-full h-10 mb-4 flex items-center justify-center bg-blue-600 dark:bg-blue-800 text-white"
    >
      <h2
        aria-label="header-title"
      >
        Figure Manager
      </h2>
    </div>
    <div
      class="bg-gray-100 dark:bg-[#1E293B] w-full h-full flex items-center justify-center shadow rounded-lg p-4 sm:p-6 xl:p-8 "
    >
      <div
        aria-label="container shapes"
        class="flex w-full p-10 overflow-auto"
        role="list"
      >
        <div
          aria-label="item-container"
          class="relative h-auto w-[300px] flex items-center justify-center px-2 left-0 top-0"
          data-test="item-container"
        >
          <div
            class="absolute left-[50%] right-[50%] flex items-center justify-center h-auto w-autp"
            style="transition: scale 2s; transform: translate(-50%, -50%); scale: 1; display: flex;"
          >
            <div
              aria-label="add shape"
              class="flex items-center justify-center cursor-pointer bg-white rounded-full w-[50px] h-[50px] mx-auto mt-40 mr-5 ml-0"
              data-test="add-button"
              role="button"
            >
              <svg
                aria-hidden="true"
                class="text-blue-600"
                fill="currentColor"
                height="40px"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="40px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zM12.75 9a.75.75 0 00-1.5 0v2.25H9a.75.75 0 000 1.5h2.25V15a.75.75 0 001.5 0v-2.25H15a.75.75 0 000-1.5h-2.25V9z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              aria-label="delete shape"
              class="flex items-center justify-center cursor-pointer bg-white rounded-full w-[50px] h-[50px] mx-auto undefined"
              data-test="delete-button"
              role="button"
            >
              <svg
                aria-hidden="true"
                class="text-red-600"
                fill="none"
                height="40px"
                stroke="currentColor"
                stroke-width="1.5"
                viewBox="0 0 24 24"
                width="40px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </div>
            <div
              aria-label="add shape"
              class="flex items-center justify-center cursor-pointer bg-white rounded-full w-[50px] h-[50px] mx-auto mt-40 ml-5 mr-0"
              data-test="add-button"
              role="button"
            >
              <svg
                aria-hidden="true"
                class="text-blue-600"
                fill="currentColor"
                height="40px"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="40px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zM12.75 9a.75.75 0 00-1.5 0v2.25H9a.75.75 0 000 1.5h2.25V15a.75.75 0 001.5 0v-2.25H15a.75.75 0 000-1.5h-2.25V9z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            aria-label="item"
            class="h-[200px] w-[200px] object-cover bg-transparent"
          >
            <svg
              class="text-teal-700"
              fill="none"
              height="200px"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="200px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 17C14.7614 17 17 14.7614 17 12C17 9.23858 14.7614 7 12 7C9.23858 7 7 9.23858 7 12C7 14.7614 9.23858 17 12 17ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
        />
      </div>
    </div>
    <div
      class="w-full h-5 mt-4 flex items-center justify-start text-black dark:text-white"
    >
      <p>
        Developed by
         
        <a
          aria-label="developer"
          class="hover:text-blue-700 underline"
          href="https://github.com/carloscgo/shape-list"
          target="_blank"
        >
          Carlos Camacho
        </a>
      </p>
    </div>
  </div>
</div>
`;

exports[`List > should call the onDelete callback when a shape is deleted 1`] = `
<div>
  <div
    aria-label="container-main-shapes"
    class="w-full h-full flex flex-col items-center justify-center"
    role="list"
  >
    <div
      class="w-full h-10 mb-4 flex items-center justify-center bg-blue-600 dark:bg-blue-800 text-white"
    >
      <h2
        aria-label="header-title"
      >
        Figure Manager
      </h2>
    </div>
    <div
      class="bg-gray-100 dark:bg-[#1E293B] w-full h-full flex items-center justify-center shadow rounded-lg p-4 sm:p-6 xl:p-8 "
    >
      <div
        aria-label="container shapes"
        class="flex w-full p-10 overflow-auto"
        role="list"
      >
        <div
          aria-label="add shape"
          class="flex items-center justify-center cursor-pointer bg-white rounded-full w-[50px] h-[50px] mx-auto my-20 mx-auto"
          role="button"
        >
          <svg
            aria-hidden="true"
            class="text-blue-600"
            fill="currentColor"
            height="40px"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="40px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25zM12.75 9a.75.75 0 00-1.5 0v2.25H9a.75.75 0 000 1.5h2.25V15a.75.75 0 001.5 0v-2.25H15a.75.75 0 000-1.5h-2.25V9z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="w-full h-5 mt-4 flex items-center justify-start text-black dark:text-white"
    >
      <p>
        Developed by
         
        <a
          aria-label="developer"
          class="hover:text-blue-700 underline"
          href="https://github.com/carloscgo/shape-list"
          target="_blank"
        >
          Carlos Camacho
        </a>
      </p>
    </div>
  </div>
</div>
`;
